--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         function openAdminAuth() { document.getElementById('admin-auth-screen').style.display = 'flex'; }
         function closeAdminAuth() { document.getElementById('admin-auth-screen').style.display = 'none'; document.getElementById('admin-password-input').value = ''; }
         function verifyAdminPassword() {
-            if(document.getElementById('admin-password-input').value === "Sa66196184") {
+            if(document.getElementById('admin-password-input').value === "13210505") {
                 closeAdminAuth(); showPage('admin');
             } else { alert("密碼錯誤"); }
         }
